gitops/manifests/umami/install.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: umami
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations: {}
  labels:
    io.kompose.service: umami
  name: umami
  namespace: umami
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: umami
  template:
    metadata:
      annotations:
        avp.kubernetes.io/path: "secret/data/umami"
      labels:
        io.kompose.service: umami
        app.kubernetes.io/name: umami
    spec:
      containers:
        - env:
            - name: APP_SECRET
              value: <path:secret/data/umami#APP_SECRET>
            - name: DATABASE_TYPE
              value: postgresql
            - name: DATABASE_URL
              value: <path:secret/data/umami#PG_URL>
          image: ghcr.io/umami-software/umami:postgresql-latest
          name: umami
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
              hostPort: 3000
              protocol: TCP
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  annotations: {}
  namespace: umami
  labels:
    io.kompose.service: umami
  name: umami
spec:
  ports:
    - name: "3000"
      port: 3000
      targetPort: 3000
  selector:
    io.kompose.service: umami
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: umami-ingress
  namespace: umami
  annotations:
    kubernetes.io/ingress.class: traefik-external
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`umami.local.timmybtech.com`)
      kind: Rule
      services:
        - name: umami
          port: 3000
  tls:
    secretName: local-timmybtech-com-tls
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloudflared
  namespace: umami
spec:
  selector:
    matchLabels:
      app: cloudflared
  replicas: 2 # You could also consider elastic scaling for this deployment
  template:
    metadata:
      labels:
        app: cloudflared
    spec:
      containers:
      - name: cloudflared
        image: cloudflare/cloudflared:2024.3.0
        args:
        - tunnel
        # Points cloudflared to the config file, which configures what
        # cloudflared will actually do. This file is created by a ConfigMap
        # below.
        - --config
        - /etc/cloudflared/config/config.yaml
        - run
        livenessProbe:
          httpGet:
            # Cloudflared has a /ready endpoint which returns 200 if and only if
            # it has an active connection to the edge.
            path: /ready
            port: 2000
          failureThreshold: 1
          initialDelaySeconds: 10
          periodSeconds: 10
        volumeMounts:
        - name: config
          mountPath: /etc/cloudflared/config
          readOnly: true
        # Each tunnel has an associated "credentials file" which authorizes machines
        # to run the tunnel. cloudflared will read this file from its local filesystem,
        # and it'll be stored in a k8s secret.
        - name: creds
          mountPath: /etc/cloudflared/creds
          readOnly: true
      volumes:
      - name: creds
        secret:
          # By default, the credentials file will be created under ~/.cloudflared/<tunnel ID>.json
          # when you run `cloudflared tunnel create`. You can move it into a secret by using:
          # ```sh
          # kubectl create secret generic tunnel-credentials \
          # --from-file=credentials.json=/Users/yourusername/.cloudflared/<tunnel ID>.json
          # ```
          secretName: tunnel-credentials
      # Create a config.yaml file from the ConfigMap below.
      - name: config
        configMap:
          name: cloudflared
          items:
          - key: config.yaml
            path: config.yaml
